<resources>
    <string name="app_name">EasyStore</string>
    <string name="continuar_google">Comenzar con Google</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="Rebost">Rebost</string>
    <string name="AddProduct">Añadir producto</string>
    <string name="ProductName"> Nombre del producto</string>
    <string name="RecipeName"> Nombre de la receta</string>
    <string name="RecipeDescription"> Descripción</string>
    <string name="Quantity">Cantidad</string>
    <string name="minuts">minutos</string>
    <string name="create">Crear</string>
    <string name="created">Creado</string>

    <string name="addImage">Añadir Imagen</string>
    <string name="delete">Eliminar</string>
    <string name="Category">Categoria</string>
    <string name="Description">Descripción</string>
    <string name="ExpirationDate">Data de caducidad</string>
    <string name="unitSelectorSpinner"> </string>
    <string name="v"> v </string>
    <string name="main"> Principal </string>
    <string name="sistem"> Sistema </string>
    <string name="recipe"> Recetas </string>
    <string name="recipeDay"> Recetas del dia</string>
    <string name="recipeNone"> Sin recetas </string>
    <string name="store"> Inventario </string>
    <string name="favoriteRecipes"> Recetas favoritas</string>
    <string name="myRecipes"> Mis recetas</string>
    <string name="recipeOption">Opciones de recetas</string>
    <string name="diet">Tipo de dieta</string>
    <string-array name="dietEnum">
        <item>None</item>
        <item>balanced</item>
        <item>high-fiber</item>
        <item>high-protein</item>
        <item>low-carb</item>
        <item>low-fat</item>
        <item>low-sodium</item>
    </string-array>
    <string name="health">Intolerancia o preferencia</string>
    <string-array name="healthEnum">
        <item>None</item>
        <item>alcohol-cocktail</item>
        <item>alcohol-free</item>
        <item>celery-free</item>
        <item>crustacean-free</item>
        <item>dairy-free</item>
        <item>DASH</item>
        <item>egg-free</item>
        <item>fish-free</item>
        <item>fodmap-free</item>
        <item>gluten-free</item>
        <item>immuno-supportive</item>
        <item>keto-friendly</item>
        <item>kidney-friendly</item>
        <item>kosher</item>
        <item>low-fat-abs</item>
        <item>low-potassium</item>
        <item>low-sugar</item>
        <item>lupine-free</item>
        <item>Mediterranean</item>
        <item>mollusk-free</item>
        <item>mustard-free</item>
        <item>no-oil-added</item>
        <item>paleo</item>
        <item>peanut-free</item>
        <item>pescatarian</item>
        <item>pork-free</item>
        <item>red-meat-free</item>
        <item>sesame-free</item>
        <item>shellfish-free</item>
        <item>soy-free</item>
        <item>sugar-conscious</item>
        <item>sulfite-free</item>
        <item>tree-nut-free</item>
        <item>vegan</item>
        <item>vegetarian</item>
        <item>wheat-free</item>
    </string-array>
    <string name="cuisineType">Tipo de cocina</string>
    <string-array name="cuisineTypeEnum">
        <item>None</item>
        <item>American</item>
        <item>Asian</item>
        <item>British</item>
        <item>Caribbean</item>
        <item>Central Europe</item>
        <item>Chinese</item>
        <item>Eastern Europe</item>
        <item>French</item>
        <item>Indian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Kosher</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Middle Eastern</item>
        <item>Nordic</item>
        <item>South American</item>
        <item>South East Asian</item>
    </string-array>
    <string name="mealType">Tipo de comida</string>
    <string-array name="mealType">
        <item>None</item>
        <item>Breakfast</item>
        <item>Dinner</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Teatime</item>
    </string-array>
    <string name="time">Tiempo de preparacion (min - max minutos)</string>
    <string-array name="timeEnum">
        <item>None</item>
        <item>Breakfast</item>
        <item>Dinner</item>
        <item>Lunch</item>
        <item>Snack</item>
        <item>Teatime</item>
    </string-array>
    <string name="excluded">Ingrediente excluido</string>
    <string name="filter">Filtrar</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="CreateRecipe">Crear receta</string>
    <string name="creatProduct" />
    <string name="cancel">Cancelar</string>
    <string name="ingredients">Ingredientes</string>
    <string name="preparation">Preparación</string>
    <string name="recipeDetail">Detalle de la receta</string>
    <string name="goInstructions">Ir a instrucciones</string>
    <string name="loading_recipe">Cargando recetas...</string>
    <string name="loading_products">Cargando productos...</string>
    <string name="loading">Guardando la receta...</string>
    <string name="imposibleCreation">No se ha podido guardar la receta</string>
    <string name="createdAndImageRetard">Se ha creado una nueva recet</string>
    <string name="favoriteConfiDelete">¿Estas seguro que ya no te gusta la receta?</string>
    <string name="firebaseNoLoad">Uy... No carga la base de datos, comprebe si tiene conección</string>
    <string name="modifiedAndImageRetard">Se ha modificado la receta</string>
    <string name="loadDoc">Cargar fichero</string>
    <string name="ModifyRecipe">Modificar recepta</string>
    <string name="creadButNoImage">Se ha creado la receta, pero ha ha sido possible subir la imagen</string>
    <string name="modifiedButNoImage">Se ha modificado la receta, pero no se ha podido cargar la imagen</string>
    <string name="Doc">Documento</string>
    <string-array name="SprintItemsUnit">
        <item>unidad</item>
        <item>g</item>
        <item>kg</item>
        <item>L</item>
        <item>mL</item>
    </string-array>

</resources>