<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/recipeOption"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dietTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diet"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/dietSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        tools:ignore="SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/health"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/healthSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/cuisineType"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/cuisineTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/mealType"
        android:textColor="#000000"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/mealTypeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:text="@string/time"
        android:textColor="#000000"
        android:textSize="12sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/minTimiTV"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:inputType="number"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="-"
            android:textColor="#000000"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/minTimiTV"
            tools:layout_editor_absoluteY="2dp" />

        <EditText
            android:id="@+id/maxTimeTV"
            android:layout_width="51dp"
            android:layout_height="match_parent"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            tools:ignore="SpeakableTextPresentCheck"
            tools:layout_editor_absoluteY="0dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/noBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/recipeFilterBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#6FB627"
            android:text="@string/filter"
            android:textColor="#000000" />

    </LinearLayout>

</LinearLayout>